--- a/ExoPlayerWrapper/ExoPlayerWrapper.Android/ExoPlayerWrapper.Android.csproj
+++ b/ExoPlayerWrapper/ExoPlayerWrapper.Android/ExoPlayerWrapper.Android.csproj
@@ -66,6 +66,9 @@
     <PackageReference Include="Xam.Plugins.Android.ExoPlayer.Hls">
       <Version>2.9.7</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Plugins.Android.ExoPlayer.OkHttp">
+      <Version>2.9.7</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="4.1.0.581479" />
     <PackageReference Include="Xamarin.Android.Support.ViewPager" Version="28.0.0.1" />
     <PackageReference Include="Xamarin.Android.Support.Design" Version="28.0.0.1" />
